# cmapf

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyvenv.cfg  setup.py  test.py
Code/: Calculate_Priority.py  README.md  mapf.py  priority.lp  run_clingo.py  run_test.py  solver_results.xlsx
Code/Archieve/instances_old/: random-32-32-200.lp
Code/Instances/Processed/empty-128-128/empty-128-128-condensed-0/: empty-128-128-condensed-0_10.lp  empty-128-128-condensed-0_20.lp  empty-128-128-condensed-0_25.lp  empty-128-128-condensed-0_40.lp  empty-128-128-condensed-0_5.lp  empty-128-128-condensed-0_50.lp  empty-128-128-condensed-0_55.lp  empty-128-128-condensed-0_60.lp  empty-128-128-condensed-0_65.lp  empty-128-128-condensed-0_70.lp  empty-128-128-condensed-0_75.lp  empty-128-128-condensed-0_80.lp  empty-128-128-condensed-0_90.lp  empty-128-128-condensed-0_95.lp
Code/Instances/Processed/empty-128-128/empty-128-128-condensed-1/: empty-128-128-condensed-1_100.lp  empty-128-128-condensed-1_15.lp  empty-128-128-condensed-1_40.lp  empty-128-128-condensed-1_5.lp  empty-128-128-condensed-1_55.lp  empty-128-128-condensed-1_60.lp  empty-128-128-condensed-1_80.lp  empty-128-128-condensed-1_90.lp  empty-128-128-condensed-1_95.lp
Code/Instances/Processed/empty-128-128/empty-128-128-condensed-2/: empty-128-128-condensed-2_10.lp  empty-128-128-condensed-2_100.lp  empty-128-128-condensed-2_20.lp  empty-128-128-condensed-2_35.lp  empty-128-128-condensed-2_45.lp  empty-128-128-condensed-2_55.lp  empty-128-128-condensed-2_65.lp  empty-128-128-condensed-2_70.lp  empty-128-128-condensed-2_80.lp  empty-128-128-condensed-2_85.lp  empty-128-128-condensed-2_90.lp  empty-128-128-condensed-2_95.lp
Code/Instances/Processed/empty-128-128/empty-128-128-condensed-3/: empty-128-128-condensed-3_15.lp  empty-128-128-condensed-3_20.lp  empty-128-128-condensed-3_25.lp  empty-128-128-condensed-3_35.lp  empty-128-128-condensed-3_40.lp  empty-128-128-condensed-3_45.lp  empty-128-128-condensed-3_60.lp  empty-128-128-condensed-3_65.lp  empty-128-128-condensed-3_75.lp  empty-128-128-condensed-3_80.lp  empty-128-128-condensed-3_90.lp
Code/Instances/Processed/empty-128-128/empty-128-128-condensed-4/: empty-128-128-condensed-4_10.lp  empty-128-128-condensed-4_15.lp  empty-128-128-condensed-4_20.lp  empty-128-128-condensed-4_40.lp  empty-128-128-condensed-4_65.lp  empty-128-128-condensed-4_75.lp
Code/Instances/Processed/empty-128-128/empty-128-128-even-10/: empty-128-128-even-10_20.lp  empty-128-128-even-10_30.lp  empty-128-128-even-10_40.lp  empty-128-128-even-10_45.lp  empty-128-128-even-10_5.lp  empty-128-128-even-10_50.lp  empty-128-128-even-10_65.lp  empty-128-128-even-10_70.lp  empty-128-128-even-10_85.lp
Code/Instances/Processed/empty-128-128/empty-128-128-even-11/: empty-128-128-even-11_10.lp  empty-128-128-even-11_20.lp  (+6 more)
Code/Instances/maps/: empty-128-128.map
Code/Instances/scenarios/empty-128-128/: empty-128-128-even-10.scen  empty-128-128-even-13.scen  empty-128-128-even-14.scen
Code/Instances/scenarios/maze-64-64-2/: maze-64-64-2-even-10.scen  maze-64-64-2-even-11.scen  maze-64-64-2-even-13.scen  maze-64-64-2-even-14.scen
Code/Instances/scenarios/random-128-128-20/: random-128-128-20-even-10.scen
Code/Instances/scenarios/room-128-128-4/: room-128-128-4-even-13.scen  room-128-128-4-even-14.scen
Code/Instances/scenarios/room-64-64-4/: room-64-64-4-even-12.scen  room-64-64-4-even-13.scen  room-64-64-4-even-14.scen
cmake/: CMAPFConfig.cmake.in  glob-paths.py  python-site.py
examples/: MAPF_priority.py  MAPF_with_priority.py  README.md  block.py  encoding.lp  example.py  extract_map.py  linked_list.py  mapf.py  priority.lp  run_clingo.py  run_test.py  shortest_path.py  test-instance.lp  test.lp  typing_file.py
examples/Archieve/: test.py
examples/Archieve/instances_old/: maze-32-32-20.lp
examples/Instances/maps/: random-128-128-20.map  room-128-128-4.map
examples/Instances/scenarios/empty-128-128/: empty-128-128-even-11.scen  empty-128-128-even-12.scen
examples/Instances/scenarios/empty-64-64/: empty-64-64-even-10.scen  empty-64-64-even-11.scen  empty-64-64-even-12.scen  empty-64-64-even-13.scen  empty-64-64-even-14.scen
examples/Instances/scenarios/maze-64-64-2/: maze-64-64-2-even-12.scen
examples/Instances/scenarios/random-128-128-20/: random-128-128-20-even-11.scen  random-128-128-20-even-12.scen  random-128-128-20-even-13.scen  random-128-128-20-even-14.scen
examples/Instances/scenarios/room-128-128-4/: room-128-128-4-even-10.scen  room-128-128-4-even-11.scen  room-128-128-4-even-12.scen
examples/Instances/scenarios/room-64-64-4/: room-64-64-4-even-10.scen  room-64-64-4-even-11.scen
examples/instances/: maze-32-32-10.lp  random-32-32-200.lp  toy1.lp  toy2.lp
examples/instances/Processed/: empty-16-16-random-1.lp  empty-16-16-random-12.lp  empty-16-16-random-14.lp  empty-16-16-random-15.lp  empty-16-16-random-2.lp  empty-16-16-random-21.lp  empty-16-16-random-22.lp  empty-16-16-random-23.lp  empty-16-16-random-3.lp  empty-16-16-random-4.lp  empty-16-16-random-6.lp  empty-16-16-random-7.lp  empty-16-16-random-9.lp  empty-32-32-random-1.lp  empty-32-32-random-10.lp  empty-32-32-random-11.lp  empty-32-32-random-13.lp  empty-32-32-random-15.lp  empty-32-32-random-18.lp  empty-32-32-random-20.lp  empty-32-32-random-22.lp  empty-32-32-random-25.lp  empty-32-32-random-6.lp  empty-32-32-random-9.lp  empty-48-48-random-10.lp  empty-48-48-random-14.lp  empty-48-48-random-19.lp  empty-48-48-random-2.lp  empty-48-48-random-20.lp  empty-48-48-random-4.lp  empty-48-48-random-6.lp  empty-48-48-random-9.lp  empty-8-8-random-10.lp  empty-8-8-random-11.lp  empty-8-8-random-12.lp  empty-8-8-random-16.lp  empty-8-8-random-19.lp  empty-8-8-random-2.lp  empty-8-8-random-20.lp  empty-8-8-random-21.lp  (+7 more)
examples/instances_old/: toy2.lp
libcmapf/: CMakeLists.txt
libcmapf/include/: cmapf.h
libcmapf/src/: cmapf.cc
libcmapf/tests/: CMakeLists.txt  cmapf.cc
libpycmapf/: CMakeLists.txt  _cmapf.c  compile.py
libpycmapf/cmapf/: __init__.py
(+10684 files in other folders)
